fix to nav on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -102,7 +102,7 @@ section a {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: white;
     width: auto;
-    padding: 1.75em;
+    padding: 2em;
     text-align: center;
   }
 
