--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -41,3 +41,9 @@
   width: 20%;
   transition: .5s;
 }
+
+@media(max-width: 767px){
+  .Nav-item{
+    font-size: .8em;
+  }
+}
